<resources>
    
    <string name="app_name">NCKU HAPPY WIFI</string>
    <string name="title_activity_main">HappyWiFi</string>
    
    <string name="SETTING">SETTING</string>
    <string name="edit_hint_account">account</string>
    <string name="edit_hint_password">password</string>
    <string name="button_login">Login</string>
    <string name="button_setting">setting</string>
    <string name="setting_auto_wifi">Auto to Open Wifi</string>
    <string name="setting_auto_login">Auto to Login Wifi</string>
    <string name="setting_select_School">Select School Mail Type</string> 
    
    <string name="about">ABOUT</string>
    <string name="about_close">Close</string>
    <string name="about_comment">Comment</string>
    <string name="about_content">
        	version 3.x
        	\n*add NTU, NTHU, NCTU
			\n*optional mail type
			\n*manual select login school
			\n
        	\nversion 2.x
        	\nadd NUTN, STUST login
        	\n
        	\nversion 1.0
        	\n*memorize account, password
        	\n*auto to open wifi system
        	\n*auto to login NCKU wifi
        	\n*cancel auto login in state bar
        	\n*cancel operation in state bar 
        	\n*logout, close wifi in state bar
    </string>
       
    
</resources>