<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="fill_parent"
    android:background="#8F1A3B"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/SETTING"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cAutoWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_auto_wifi" />

    <CheckBox
        android:id="@+id/cAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_auto_login" />

</LinearLayout>